# Kin

./: .gitignore  .travis.yml  MANIFEST  Makefile  README.md  README.rst  _config.yml  logo.sketch  pyproject.toml  setup.py
.github/workflows/: commit-grammar.yml  python-package.yml  python-publish.yml  update-grammar.yml
grammar/: PBXProj.tokens  PBXProjParser.py
kin/: args_parser.py  kin.py  kin_error_listener.py  verifier.py
kin/grammar/: PBXProj.g4  PBXProj.interp  PBXProj.tokens  PBXProjLexer.interp  PBXProjLexer.py  PBXProjLexer.tokens  PBXProjListener.py  PBXProjParser.py
tests/: tester.py
tests/ko/: 001.out  001.pbxproj
tests/ok/: 001.pbxproj  002.pbxproj  003.pbxproj  004.pbxproj  005.pbxproj  007.pbxproj  008.pbxproj  009.pbxproj  010.pbxproj  011.pbxproj  012.pbxproj  013.pbxproj  015.pbxproj  016.pbxproj  017.pbxproj  018.pbxproj  019.pbxproj  020.pbxproj  021.pbxproj  criollo.b1e014c.project.pbxproj  deltaui.6e2ccd29.project.pbxproj  mc7h-project.pbxproj  opencv_highgui.862e1be.project.pbxproj  pbxproject.project.pbxproj  provenance.a45d68c.pbxproj  quicktableviewcontroller.81fb80d.project.pbxproj  sasquatch.79d99eaff.project.pbxproj  sdl.b392469.project.pbxproj  spm.pbxproj  sqlitemigrationmanager.742ac46.project.pbxproj  stella.project.pbxproj  weixin.17aeced.project.pbxproj  yabuse.a102152.project.pbxproj  zlib.pbxproj
